syntax = "proto3";

package auth.v1;

option java_multiple_files = true;
option java_package = "org.com.shared.proto.auth.v1";
option java_outer_classname = "AuthServiceProto";

service AuthService {
  rpc Register (RegisterRequest) returns (RegisterResponse);
  rpc Login (LoginRequest) returns (LoginResponse);
  rpc ValidateToken (ValidateTokenRequest) returns (ValidateTokenResponse);
}

message RegisterRequest {
  string email = 1;
  string password = 2;
  string nick_name = 3;
  int32 sex = 4;
}

message RegisterResponse {
  int64 user_id = 1;
  string token = 2;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  int64 user_id = 1;
  string token = 2;
}

message ValidateTokenRequest {
  string token = 1;
}

message ValidateTokenResponse {
  bool valid = 1;
  int64 user_id = 2;
}
